# CV

./: HSE_Lab_SVD_24_25.ipynb  HSE_Lab_linear_regression_24_25.ipynb  README.md
image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/include/: applier.h  args.h  bmp.h  check_bmp.h  filters.h  launcher.h
image_processor/src/: applier.cpp  args.cpp  bmp.cpp  check_bmp.cpp  filters.cpp  launcher.cpp
